# finance-ai-agent

./: .gitignore  README.md  makefile  project_documentation.html  pyproject.toml  requirements.txt  scratch.py  scratch2.py
backend/: agent_system.py  build_index.py  logger_config.py  main.py  rag_model.py  tools.py
backend/tools/: tools.py  utils.py
backend/tools/company_financial_statement_tool/: rag_model.py  yfinance_tool.py
backend/tools/company_fundamental_tool/: yfinance_tools.py
backend/tools/historical_price_tool/: yfinance_tool.py
backend/tools/news_tool/: gnews_tool.py
evaluation/: __init__.py  eval_utils.py  evaluate.py  evaluation_sample.csv  hallucination_eval.py  makefile  rag_evaluation_sample.csv
frontend/: app.py
vector_store/Hdfc/: docstore.json  index_store.json
vector_store/Reliance/: index_store.json
